--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,6 +6,9 @@ body {
   text-align: center;
   color: #10222B;
 }
+section {
+  margin-top: 40px;
+}
 nav {
   background-color: #10222B;
 }
@@ -20,9 +23,15 @@ h1 {
 }
 h2 {
   font-size: 60px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-h3 {
-  font-size: 50px;
+ul {
+  margin: 10px;
+}
+li {
+  margin: 5px;
+  padding: 5px;
 }
 a {
   text-decoration: none;
@@ -30,11 +39,4 @@ a {
 }
 a:hover {
   color: steelblue;
-}
-.lists {
-  list-style-type: none;
-  margin-top: 20px;
-}
-.list-group-item {
-  background-color: #BDD684;
 }
