--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -10,6 +10,10 @@ body{
     color: @fontColor;
 }
 
+section{
+    margin-top: 40px;
+}
+
 nav{
     background-color: #10222B;
 }
@@ -27,10 +31,17 @@ h1{
 
 h2{
     font-size: 60px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-h3{
-    font-size: 50px;
+ul{
+    margin: 10px;
+}
+
+li{
+    margin: 5px;
+    padding: 5px;
 }
 
 a{
@@ -41,11 +52,3 @@ a:hover{
     color: steelblue;
 }
 
-.lists{
-    list-style-type: none;
-    margin-top: 20px;
-}
-
-.list-group-item{
-    background-color: #BDD684;
-}
