--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,79 +4,85 @@
 	<% include ../views/partials/head.ejs %>
 </head>
 <body>
-<header>
-	<nav class="navbar navbar-toggleable-md navbar-dark bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Andrew Nagle</a>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#">Contact</a>
-      <a class="nav-item nav-link" href="#">Projects</a>
-      <a class="nav-item nav-link" href="#">Skills</a>
-    </div>
-  </div>
-</nav>
+<header>	
+	<nav class="navbar fixed-top navbar-toggleable-sm navbar-dark bg-faded">
+		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+	<a class="navbar-brand" href="#">Andrew Nagle</a>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+			<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+			<a class="nav-item nav-link" href="#">Contact</a>
+			<a class="nav-item nav-link" href="#">Projects</a>
+			<a class="nav-item nav-link" href="#">Skills</a>
+			</div>
+		</div>
+	</nav>
 </header>
 	<main>
 		<section>
 			<div class="container">
 				<div class="row d-flex justify-content-between">
-					<div class=col-md-7>
+					<div class=col-md-12>
 						<h1>Andrew Nagle</h1>
 						<div>
 							<img src="/images/GA1017027.jpg">
 						</div>
 						<h2>About Me: </h2>
 						<p>I am a full stack web developer with a passion for coding, I love seeing the code I type into a text editor come to life in a browser. Since I began my job in IT support over five years ago, I have always had an interest in coding. Three months ago I decided to finally plunge head on into the coding world by enrolling in an immersive fullstack web development camp at General Assembly.</p><br>
-
+						<div>
 						<h2>Contact:</h2>
-						<ul class="list-group lists">
-							<li class="list-group-item">
+						<ul>
+							<li>
 								<p>248-736-5700</p>
 							</li>
-							<li class="list-group-item">
+							<li>
 								<a href="mailto:andrewnagle99@gmail.com">Contact Via Gmail</a>
 							</li>
-							<li class="list-group-item">
-								<a href="https://www.linkedin.com/in/andrew-nagle99/">LinkedIn</a>
+							<li>
+								<a href="https://www.linkedin.com/in/andrew-nagle99/" rel="noopener noreferrer" target="_blank">LinkedIn</a>
 							</li>
 						</ul>
+						</div>	
 
+						<div>
 						<h2>Projects: </h2>
-						<ul class="list-group lists">
-							<li class="list-group-item">
+						<ul>
+							<li>
 							<a href="https://fumikozombiecastle.herokuapp.com/">Fumiko Zombie Castle</a><br>
 							</li>
-							<li class="list-group-item">
+							<li>
 							<a href="https://movieandtvreviews.herokuapp.com/">Movie and TV Reviews</a>
 							</li>
 						</ul>
+						</div>
+
+						<div>
 						<h2>Skills:</h2>
-						<ul class="list-group lists">
-							<li class="list-group-item">
+						<ul>
 							<h4>Languages:</h4>
+							<li>
 							HTML5, Javascript, Ruby
 							</li>
-							<li class="list-group-item">
 							<h4>Web Development:</h4>
+							<li>
 							 CSS3, LESS, Node.js, Gulp, Ajax, Bootstrap, Express
 							</li>
-							<li class="list-group-item">
 							<h4>Databases:</h4>
+							<li>
 							MongoDB, Microsoft SQL, MySQL
 							</li>
-							<li class="list-group-item">
 							<h4>Other:</h4>
+							<li>
 							Git, GitHub
 							</li>
-							<li class="list-group-item">
 							<h4>Deployment:</h4>
+							<li>
 							Heroku
 							</li>
 						</ul>
+						</div>
 				</div>
 			</div>		
 		</section>
