updated nav links to scroll to anchor points

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -16,8 +16,16 @@
 
 <link rel="stylesheet" type="text/css" href="/styles/style.css">
 
-<link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
-
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
+<script type="text/javascript" src="/javascripts/jquery.localScroll.js"></script>
+
+<script type="text/javascript" src="/javascripts/jquery.scrollTo.js"></script>
+
+<script type="text/javascript">
+$(document).ready(function() {
+  $('#nav').localScroll({duration:800});
+});
+</script>
 
 </head>
