--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -12,11 +12,18 @@ section {
 nav {
   background-color: #10222B;
 }
-img {
+.myPic {
   height: 50%;
   width: 50%;
   border-radius: 30%;
   margin: 15px;
+}
+.projPic {
+  height: 100%;
+  width: 100%;
+  margin: 10px;
+  border-radius: 10%;
+  box-shadow: 2px 2px 2px 1px #000000;
 }
 h1 {
   font-size: 70px;
