--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -3,7 +3,6 @@
 body{
     background-color: #E2F0D6;
 	font-family: 'Oswald', sans-serif;
-	// font-family: 'Baloo Chettan', cursive;
     margin: 10px;
     padding: 10px;
     text-align: center;
@@ -18,11 +17,19 @@ nav{
     background-color: #10222B;
 }
 
-img{
+.myPic{
     height: 50%;
     width: 50%;
     border-radius: 30%;
     margin: 15px;
+}
+
+.projPic{
+    height: 100%;
+    width: 100%;
+    margin: 10px;
+    border-radius: 10%;
+    box-shadow:  2px 2px 2px 1px rgba(0, 0, 0, 1);
 }
 
 h1{
