--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
 	<a class="navbar-brand" href="#">Andrew Nagle</a>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-			<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-			<a class="nav-item nav-link" href="#">Contact</a>
-			<a class="nav-item nav-link" href="#">Projects</a>
-			<a class="nav-item nav-link" href="#">Skills</a>
+			<a class="nav-item nav-link active" href="#home">Home <span class="sr-only">(current)</span></a>
+			<a class="nav-item nav-link" href="#contact">Contact</a>
+			<a class="nav-item nav-link" href="#projects">Projects</a>
+			<a class="nav-item nav-link" href="#skills">Skills</a>
 			</div>
 		</div>
 	</nav>
@@ -25,14 +25,14 @@
 			<div class="container">
 				<div class="row d-flex justify-content-between">
 					<div class=col-md-12>
-						<h1>Andrew Nagle</h1>
+						<h1><a name="home">Andrew Nagle</a></h1>
 						<div>
-							<img src="/images/GA1017027.jpg">
+							<img class="myPic" src="/images/GA1017027.jpg">
 						</div>
 						<h2>About Me: </h2>
 						<p>I am a full stack web developer with a passion for coding, I love seeing the code I type into a text editor come to life in a browser. Since I began my job in IT support over five years ago, I have always had an interest in coding. Three months ago I decided to finally plunge head on into the coding world by enrolling in an immersive fullstack web development camp at General Assembly.</p><br>
 						<div>
-						<h2>Contact:</h2>
+						<h2><a name="contact">Contact:</a></h2>
 						<ul>
 							<li>
 								<p>248-736-5700</p>
@@ -47,19 +47,21 @@
 						</div>	
 
 						<div>
-						<h2>Projects: </h2>
+						<h2><a name="projects">Projects:</a></h2>
 						<ul>
 							<li>
 							<a href="https://fumikozombiecastle.herokuapp.com/">Fumiko Zombie Castle</a><br>
+							<img class=projPic src="/images/startScreen.png">
 							</li>
 							<li>
-							<a href="https://movieandtvreviews.herokuapp.com/">Movie and TV Reviews</a>
+							<a href="https://movieandtvreviews.herokuapp.com/">Movie and TV Reviews</a><br>
+							<img class=projPic src="/images/home.png">
 							</li>
 						</ul>
 						</div>
 
 						<div>
-						<h2>Skills:</h2>
+						<h2><a name="skills">Skills:</a></h2>
 						<ul>
 							<h4>Languages:</h4>
 							<li>
