--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -3,30 +3,47 @@
 body{
     background-color: #E2F0D6;
 	font-family: 'Oswald', sans-serif;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
     color: @fontColor;
 }
 
 section{
     margin-top: 40px;
+    text-align: center;
 }
 
 nav{
+    height: 120px;
+    line-height: 90px;
     background-color: #10222B;
+    width: 100%;
+}
+
+#sidenav-overlay{
+    z-index: 10;
+}
+
+.navbar-fixed{
+    height: 120px;
 }
 
 .myPic{
     height: 50%;
     width: 50%;
-    border-radius: 30%;
     margin: 15px;
+    margin-top: 40px;
 }
 
 .projPic{
     height: 100%;
     width: 100%;
+    margin: 10px;
+    border-radius: 10%;
+    box-shadow:  2px 2px 2px 1px rgba(0, 0, 0, 1);
+}
+
+.weatherPic{
+    height: 50%;
+    width: 50%;
     margin: 10px;
     border-radius: 10%;
     box-shadow:  2px 2px 2px 1px rgba(0, 0, 0, 1);
@@ -38,8 +55,21 @@ h1{
 
 h2{
     font-size: 60px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h3{
+    font-weight: bolder;
+    font-size: 20px;
+    text-decoration: underline;
+    margin-bottom: 20px;
+}
+
+h4{
+    font-size: 1.5rem;
+    font-style: bold;
+    text-decoration: underline;
 }
 
 ul{
@@ -49,13 +79,33 @@ ul{
 li{
     margin: 5px;
     padding: 5px;
+    font-size: 1.3rem;
+    letter-spacing: 0.06em;
 }
 
 a{
     text-decoration: none;
     color: @fontColor;
 }
+
+p{
+    font-size: 1rem;
+    letter-spacing: 0.06em;
+    text-align: left;
+    font-family: helvetica, arial;
+    line-height: 1.3rem;
+}
+
+hr{
+    margin: 20px 0;
+}
+
 a:hover{
     color: steelblue;
+}
+
+#home{
+    height: 150px;
+    width: auto;
 }
 
